{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 24,
  "lineage": "fc748ec6-2eb9-6094-542e-c7a05c880923",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webservers-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/zones/us-central1-b/instanceGroups/terraform-webservers",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 10,
            "creation_timestamp": "2023-10-13T16:17:37.012-07:00",
            "enable_cdn": false,
            "fingerprint": "OI-nKU1ERHI=",
            "generated_id": 2000359739695066878,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/healthChecks/webservers-health-check"
            ],
            "id": "projects/gcpproject1310/global/backendServices/webservers-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webservers-backend-service",
            "port_name": "http",
            "project": "gcpproject1310",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/backendServices/webservers-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.vm_instance",
            "google_compute_instance.vm_instance_2",
            "google_compute_instance_group.webservers",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "load_balancer_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-13T16:16:56.808-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpproject1310/global/firewalls/nginx-load-balancer",
            "log_config": [],
            "name": "nginx-load-balancer",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
            "priority": 1000,
            "project": "gcpproject1310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/firewalls/nginx-load-balancer",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nginx-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-14T14:54:36.694-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcpproject1310/global/firewalls/public-ssh",
            "log_config": [],
            "name": "public-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
            "priority": 1000,
            "project": "gcpproject1310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/firewalls/public-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "nginx-instance"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "webservers-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-10-13T16:18:22.848-07:00",
            "id": "projects/gcpproject1310/regions/us-central1/forwardingRules/website-forwarding-rule",
            "ip_address": "35.209.226.203",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "website-forwarding-rule",
            "network_tier": "STANDARD",
            "port_range": "80-80",
            "project": "gcpproject1310",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/regions/us-central1/forwardingRules/website-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/targetHttpProxies/website-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.vm_instance",
            "google_compute_instance.vm_instance_2",
            "google_compute_instance_group.webservers",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210420",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/zones/us-central1-b/disks/nginx-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcpproject1310/zones/us-central1-b/instances/nginx-instance",
            "instance_id": "1089173305338130714",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cQvxcF6GY6E=",
            "metadata_startup_script": "curl -fsSL https://get.docker.com -o get-docker.sh \u0026\u0026 \nsudo sh get-docker.sh \u0026\u0026 \nsudo service docker start \u0026\u0026 \ndocker run -p 8080:80 -d nginxdemos/hello\n",
            "name": "nginx-instance",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/regions/us-central1/subnetworks/private-network",
                "subnetwork_project": "gcpproject1310"
              }
            ],
            "project": "gcpproject1310",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/zones/us-central1-b/instances/nginx-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nginx-instance"
            ],
            "tags_fingerprint": "xVSJkfrfynM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210420",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/zones/us-central1-b/disks/nginx-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gcpproject1310/zones/us-central1-b/instances/nginx-instance-2",
            "instance_id": "2852100012744405273",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "cQvxcF6GY6E=",
            "metadata_startup_script": "curl -fsSL https://get.docker.com -o get-docker.sh \u0026\u0026 \nsudo sh get-docker.sh \u0026\u0026 \nsudo service docker start \u0026\u0026 \ndocker run -p 8080:80 -d nginxdemos/hello\n",
            "name": "nginx-instance-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
                "network_ip": "10.2.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/regions/us-central1/subnetworks/private-network",
                "subnetwork_project": "gcpproject1310"
              }
            ],
            "project": "gcpproject1310",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/zones/us-central1-b/instances/nginx-instance-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nginx-instance"
            ],
            "tags_fingerprint": "xVSJkfrfynM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcpproject1310/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "gcpproject1310",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network"
          },
          "dependencies": [
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_network_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/gcpproject1310/global/routes/private-network-internet",
            "name": "private-network-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "gcpproject1310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/routes/private-network-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T16:16:57.689-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcpproject1310/regions/us-central1/routers/quickstart-router",
            "name": "quickstart-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
            "project": "gcpproject1310",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/regions/us-central1/routers/quickstart-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "gcpproject1310/us-central1/quickstart-router/quickstart-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "quickstart-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcpproject1310",
            "region": "us-central1",
            "router": "quickstart-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T16:16:57.373-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/gcpproject1310/regions/us-central1/subnetworks/private-network",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "private-network",
            "network": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/networks/terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcpproject1310",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/regions/us-central1/subnetworks/private-network",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T16:18:11.022-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/gcpproject1310/global/targetHttpProxies/website-proxy",
            "name": "website-proxy",
            "project": "gcpproject1310",
            "proxy_bind": false,
            "proxy_id": 7986607409361874652,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/targetHttpProxies/website-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/urlMaps/website-map"
          },
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.vm_instance",
            "google_compute_instance.vm_instance_2",
            "google_compute_instance_group.webservers",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_compute_url_map.default",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-10-13T16:17:59.127-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/backendServices/webservers-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "eAtLE8unqb8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcpproject1310/global/urlMaps/website-map",
            "map_id": 6045058251975061192,
            "name": "website-map",
            "path_matcher": [],
            "project": "gcpproject1310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcpproject1310/global/urlMaps/website-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.webservers-backend-service",
            "google_compute_health_check.webservers-health-check",
            "google_compute_instance.vm_instance",
            "google_compute_instance.vm_instance_2",
            "google_compute_instance_group.webservers",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    }
  ]
}